# faculty-hours-payrolls

./: .gitignore  README.md  pyproject.toml  test_db.db
.docker/: Dockerfile  docker-compose.yml
.kube/faculty-hours-payrolls-chart/: Chart.yaml  values.yaml
.kube/faculty-hours-payrolls-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
.kube/faculty-hours-payrolls-chart/templates/tests/: test-connection.yaml
payrolls/: main.py  settings.py
payrolls/logic/: payrolls.py
payrolls/models/: __init__.py  database.py  models.py  schemas.py
payrolls/routers/: get_data.py  payrolls_endpoints.py
payrolls/tests/: conftest.py  test_payrollls.py  test_wages.py
